<resources>
    <string name="app_name">Pixel Draw</string>
    <string name="new_canvas">New Canvas</string>
    <string name="save_photo">Save as Photo</string>
    <string name="photo_saved">Photo Saved</string>
    <string name="strokes">Strokes</string>
    <string name="pixels">Pixels</string>
    <string name="pref_title_theme">Dark theme</string>
    <string name="pref_description_theme">Turn on dark theme</string>
    <string name="pref_title_pixel_grid_size">Pixel Grid Size</string>
    <string name="pref_title_subject_order">Subject order</string>
    <string name="pref_none">None</string>
    <string name="settings">Settings</string>
    <string name="previous">Previous</string>
    <string name="change_color">Change Color</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="orange">Orange</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="purple">Purple</string>
    <string name="white">White</string>
    <string name="black">Black</string>
    <string name="color_changed_to">Color Changed To </string>

    <string-array name="pref_subject_order">
        <item>Alphabetic</item>
        <item>Most recent first</item>
        <item>Oldest first</item>
    </string-array>

    <string-array name="pref_subject_order_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
</resources>