<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ColorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2" >

    <LinearLayout
        android:id="@+id/left"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:weightSum="4"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonRed"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/red"
            android:layout_weight="1"
            android:background="#FF0000"
            android:onClick="ChangeColorSelection"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonGreen"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/green"
            android:layout_weight="1"
            android:background="#4CAF50"
            android:onClick="ChangeColorSelection"
            app:layout_constraintLeft_toLeftOf="@+id/left"
            app:layout_constraintTop_toBottomOf="@+id/buttonRed" />

        <Button
            android:id="@+id/buttonOrange"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/orange"
            android:layout_weight="1"
            android:background="#f18000"
            android:onClick="ChangeColorSelection"
            app:layout_constraintLeft_toLeftOf="@+id/left"
            app:layout_constraintTop_toBottomOf="@+id/buttonGreen" />

        <Button
            android:id="@+id/buttonBlack"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/black"
            android:layout_weight="1"
            android:background="#000"
            android:textColor="#FFF"
            android:onClick="ChangeColorSelection"
            app:layout_constraintLeft_toLeftOf="@+id/left"
            app:layout_constraintTop_toBottomOf="@+id/buttonBlack" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/right"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:weightSum="4"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonBlue"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/blue"
            android:background="#2196F3"
            android:onClick="ChangeColorSelection"
            app:layout_constraintRight_toRightOf="@+id/right"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonPurple"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/purple"
            android:layout_weight="1"
            android:background="#673AB7"
            android:onClick="ChangeColorSelection"
            app:layout_constraintRight_toRightOf="@+id/right"
            app:layout_constraintTop_toBottomOf="@+id/buttonBlue" />

        <Button
            android:id="@+id/buttonYellow"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/yellow"
            android:background="#FFEB3B"
            android:onClick="ChangeColorSelection"
            app:layout_constraintRight_toRightOf="@+id/right"
            app:layout_constraintTop_toBottomOf="@+id/buttonPurple" />

        <Button
            android:id="@+id/buttonWhite"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/white"
            android:background="#FFF"
            android:onClick="ChangeColorSelection"
            app:layout_constraintRight_toRightOf="@+id/right"
            app:layout_constraintTop_toBottomOf="@+id/buttonWhite" />

    </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>