<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/strokesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strokes"
        style="@style/primaryLabel"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/strokes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="0"
        style="@style/number"
        android:layout_marginLeft="10dp"
        app:layout_constraintLeft_toRightOf="@+id/strokesLabel"
        app:layout_constraintTop_toTopOf="@+id/strokesLabel"
        app:layout_constraintBottom_toBottomOf="@+id/strokesLabel"/>

    <TextView
        android:id="@+id/pixelLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pixels"
        style="@style/primaryLabel"
        android:layout_marginRight="10dp"
        app:layout_constraintRight_toLeftOf="@+id/pixel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pixel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="100"
        style="@style/number"
        android:layout_marginRight="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pixelLabel"
        app:layout_constraintBottom_toBottomOf="@+id/pixelLabel"/>

    <Button
        android:id="@+id/colorPickerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="ChangeColor"
        android:text="@string/change_color"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintLeft_toLeftOf="@+id/pixelGrid"
        app:layout_constraintStart_toStartOf="@+id/strokesLabel"
        app:layout_constraintTop_toBottomOf="@+id/strokesLabel" />

    <com.project.pixeldraw.PixelGrid
        android:id="@+id/pixelGrid"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/newGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_canvas"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginBottom="50dp"
        android:onClick="newCanvasClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/pixelGrid" />

    <Button
        android:id="@+id/savePhotoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_photo"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginBottom="50dp"
        android:onClick="saveImageToExternalStorage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/pixelGrid" />

    <ImageView
        android:id="@+id/colorImage"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="#000"
        app:layout_constraintBottom_toBottomOf="@+id/colorPickerButton"
        app:layout_constraintStart_toEndOf="@+id/colorPickerButton"
        app:layout_constraintTop_toTopOf="@+id/colorPickerButton" />

</androidx.constraintlayout.widget.ConstraintLayout>